--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>AA Kansas District 23</title>
 </head>
 <body>
-  <h1>Meetings</h1>
+  <label for="number-of-meetings">How many meetings would you like returned?</label>
+  <input type="number" id="number-of-meetings" name="number-of-meetings" value=10></input>
+  <button id="go">Go!</button>
+
   <ul id="meetings"></ul>
 
   <script src="app.js" type="text/javascript"></script>
